--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,11 @@
 textarea{
   resize: vertical;
   overflow-y: scroll;
-  width:28vw;
+  width:35vw;
  min-height: 29vh;
  margin:0;
  background-color:#dfc6ec;
  outline: none;
- position: relative;
  z-index:2;
 }
 .editorContainer {
@@ -27,11 +26,18 @@ h3{
   min-height: 50vh;
   border: 1px solid black;
   background-color: #dfc6ec;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
-  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4); 
   z-index:1;
   margin-bottom: 2vh;
 }
 #preview {
   overflow-wrap: break-word;
+}
+@media (max-width: 500px) {
+  textarea{
+    width: 55vw;
+  }
+  .preview {
+    width: 85vw;
+  }
 }
